--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ sqlalchemy==2.0.36
 psycopg[binary]>=3.2.2,<4.0.0
 stripe==10.5.0
 waitress==3.0.0
+gunicorn==21.2.0
 python-dotenv==1.0.1
 typing-extensions==4.12.2
