--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,13 @@ flask-cors==4.0.0
 flask-sqlalchemy==3.1.1
 sqlalchemy==2.0.36
 psycopg[binary]>=3.2.2,<4.0.0
+psycopg2-binary>=2.9.0
 stripe==10.5.0
 waitress==3.0.0
 gunicorn==21.2.0
 python-dotenv==1.0.1
 typing-extensions==4.12.2
+weasyprint>=62.0
+markdown>=3.5.0
+boto3>=1.34.0
+requests>=2.31.0
